# mos-multiboot2

./: .gitignore  CMakeLists.txt  Makefile  README.md  bochsrc  grub.cfg  u_vga16.sfn
EFI/ubuntu/: grub.cfg  grubx64.efi
kernel/: boot  boot.S  boot.asm  gdt.cpp  gdt.h  kernel.cpp  kernel.ld  memory.h  multiboot2.h  regs.h  setup.cpp  setup.h  ssfn.h  syscall.asm  syscall.cpp  syscall.h  task.asm  task.cpp  task.h  tss.cpp  tss.h
kernel/acpi/: rsdp.cpp  rsdp.h  rsdt.cpp  rsdt.h
kernel/arch/x86_64/: kernel.h
kernel/display/: gop.cpp  gop.h
kernel/interrupt/: apic.cpp  apic.h  idt.cpp  idt.h  io_apic.cpp  io_apic.h  irq.asm  isr.asm  keyboard.cpp  keyboard.h  page_fault.cpp  page_fault.h  pit.cpp  pit.h  timer.cpp  timer.h
kernel/memory/: buddy_system.cpp  buddy_system.h  flags.h  heap.cpp  heap.h  kernel_page.cpp  kernel_page.h  kmalloc.cpp  kmalloc.h  mapping.cpp  mapping.h  physical.cpp  physical.h  physical_page.h  slab.cpp  slab.h  virtual_page.h  zone.cpp  zone.h
kernel/memory/lrmalloc/: anchor.h  cache_bin.cpp  cache_bin.h  defines.h  descriptor.cpp  descriptor.h  heap.cpp  heap.h  lrmalloc.cpp  lrmalloc.h  size_class.cpp  size_class.h
kernel/multiboot2/: mbi2.h
kernel/pci/: io.h
kernel/pci/ahci/: config.h  fis.h
kernel/rtc/: rtc.cpp  rtc.h
kernel/smp/: cpu.cpp  cpu.h  smp.cpp  smp.h
kernel/std/: allocator.h  atomic.h  avl_tree.h  bitmap.cpp  bitmap.h  cpuid.h  debug.cpp  debug.h  initializer_list.h  interrupt.h  kstring.cpp  kstring.h  list.h  lock_guard.h  map.h  math.h  move.h  msr.h  new.cpp  new.h  noncopyable.h  port_ops.h  printk.cpp  printk.h  set.h  shared_ptr.h  singleton.h  spinlock.h  stdint.h  string.cpp  string.h  unique_ptr.h  unordered_set.h  vector.h
kernel/std/c++/: global_object.cpp  pure_virtual_function.cpp
kernel/std/elf/: elf.h
kernel/syscall/: read.cpp  write.cpp
kernel/thread/: condition_variable.cpp  condition_variable.h  io_queue.h  mutex.cpp  mutex.h  regs.h  scheduler.cpp  scheduler.h  semaphore.cpp  semaphore.h  task.asm  task.cpp  task.h  userland.cpp  userland.h
user/: CMakeLists.txt  main.cpp
